[gd_scene load_steps=5 format=3 uid="uid://ddrwbogyfr3sr"]

[ext_resource type="Texture2D" uid="uid://78y3hjtsq3m2" path="res://Sprites/Weapons/PressureWasherPistol.png" id="1_fygpe"]
[ext_resource type="Script" path="res://Scripts/Weapons/pressure_washer.gd" id="2_jv44m"]
[ext_resource type="AudioStream" uid="uid://dyg1vgs587l4b" path="res://Sounds/PressureWasherIdle.mp3" id="3_u3fkv"]
[ext_resource type="AudioStream" uid="uid://baoxchof2ftn2" path="res://Sounds/PressureWasherShoot.mp3" id="4_pyqs2"]

[node name="Pressure_Washer" type="Sprite2D"]
script = ExtResource("2_jv44m")
shoot_cooldown = 0.0
original_energy_use = 1.5
energy_recover_cooldown = 1.4
hold_offset = Vector2(6, 1)

[node name="Frame_Sprite" type="Sprite2D" parent="."]
position = Vector2(6, 0)
texture = ExtResource("1_fygpe")

[node name="Cannon" type="Node2D" parent="Frame_Sprite"]
position = Vector2(11, -1.5)

[node name="Hide_Water_Cooldown" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="Idle_Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_u3fkv")
pitch_scale = 1.2
bus = &"Sounds"

[node name="Shoot_Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_pyqs2")
volume_db = 7.0
pitch_scale = 1.3
bus = &"Sounds"

[connection signal="shoot" from="." to="." method="_on_shoot"]
[connection signal="timeout" from="Hide_Water_Cooldown" to="." method="_on_hide_water_cooldown_timeout"]
